--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><span>Associate the page with the payment system</span></li>
         </ul>
     </div>
-    <a class="link" href="#"></a>
+    <a class="link" href="#">AAAAAAAAAAAAAA</a>
     <div class="margin">&</div>
 </body>
 
