--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Позиционирование</title>
+    <title>pBEM1</title>
     <meta>
     <link rel="stylesheet" href="css/style.css">
 </head>
