--- a/index.html
+++ b/index.html
@@ -3,34 +3,23 @@
 
 <head>
     <title>pBEM1</title>
-    <meta>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="content-top">
-        <p>TRAVEL</p>
-        <p>Donec sed odio dui. Cras mattis consectetur purus <br> sit amet fermentum. </p>
+    <div class="header">
+        <div class="header__body">
+            <img src="/img/logo1.png" alt="logo binary" class="header__logo">
+            <div class="header__text">
+                <div class="header__title">Clear, smart, attractive design </div>
+                <div class="header__subtitle">for your app, logo, website</div>
+            </div>
+            <a href="#" class="header__button button"> READ MORE</a>
+            <a href="" class="header__arrow"><img src="/img/Arrow-down.png" alt="arrow link"></a>
+        </div>
     </div>
-    <div class="img">
-        <img src="../../img/light-man_copy.png" alt="man in the field">
-    </div>
-    <div class="content-middle">
-        <p>Donec aredsed odio dui. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta
-            ac consectetur ac, vestibulum at eros. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean eu leo quam.
-            Pellentesque ornare sem lacinia quam venenatis vestibulum. 199999</p>
-    </div>
-    <div class="content-bottom top">
-        <ul>
-            <li>Put on this page information about your product</li>
-            <li>A detailed description of your product</li>
-            <li>Tell us about the advantages and merit1s</li>
-            <li><span>Associate the page with the payment system</span></li>
-        </ul>
-    </div>
-    <a class="link" href="#">AAAAAAAAAAAAAA</a>
-    <div class="margin">&</div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
